# U7Object

./: README.md
WebSocketEndpoint/: CMakeLists.txt  README.txt  buildrun.sh  endpoint.c  mongoose.c  mongoose_extras.h  run_second_endpoint.sh  setup.sh  u7actionqueue.c  u7actionqueue.h  u7array.c  u7array.h  u7autoreleasepool.c  u7autoreleasepool.h  u7data.c  u7data.h  u7date.c  u7date.h  u7dictionary.c  u7dictionary.h  u7encryption.c  u7encryption.h  u7encryption_backup.c  u7glib.c  u7glib.h  u7json.c  u7json.h  u7mainloop.c  u7mainloop.h  u7object.c  u7object.h  u7shared.h  u7string.c  u7string.h  u7thread.c  u7thread.h  u7websocketconnection.c  u7websocketconnection.h  websocketendpoint.c  websocketendpoint.h  (+1 more)
docs/: DOCS_README.txt  cmake_project.html  index.html  installing_vs_code_extensions.html  macos_build_instructions.html  mingw64_terminal.html  ngrok_tunneling.html  ngrok_tunneling_doc_prompt.txt  selecting_static_port_number.html  ubuntu_build_instructions.html  vs_code_cmake_integration.html  why_c.html  windows_build_instructions.html
docs/iana_breakdown/: 0-999.html  1000-1999.html  10000-10999.html  11000-11999.html  12000-12999.html  13000-13999.html  14000-14999.html  15000-15999.html  16000-16999.html  17000-17999.html  18000-18999.html  19000-19999.html  2000-2999.html  20000-20999.html  21000-21999.html  22000-22999.html  23000-23999.html  24000-24999.html  25000-25999.html  26000-26999.html  27000-27999.html  28000-28999.html  29000-29999.html  3000-3999.html  30000-30999.html  31000-31999.html  32000-32999.html  33000-33999.html  34000-34999.html  35000-35999.html  36000-36999.html  37000-37999.html  38000-38999.html  39000-39999.html  4000-4999.html  40000-40999.html  41000-41999.html  42000-42999.html  43000-43999.html  44000-44999.html  (+11 more)
docs/prompt_engineering/: README.txt  chapter_jump_page.html  chapter_jump_page_creator.html  copy_button_scratch_pad.txt  human_in_the_loop.html  llm_prompt_examples.txt  topic_subtopic_tags.txt
docs/prompt_engineering/prompts/: Class documentation from source.txt
docs/vala/: glib_history.html  history_of_vala.html  history_of_vala.txt  how_to_classify_valac.html  howto_build.html  inter_thread_communication.html  mongoose.html  vala.html  vala_base_class.html  vala_project.html  websocket_endpoint.html  websocket_endpoint_prompt.html
docs/vala/intro/: history_of_vala.html  how_to_classify_valac.html  how_to_classify_valac.txt
docs/vala/u7object_api/: epoll_vs_select.html  epoll_vs_select.txt  tcp_socket_listener.html  testing_tcp_with_nc.html  u7threadloop.html  u7threadloop.txt
node/: .gitignore  install_node_linux.sh
node/parsing/iana/: .gitignore  README.txt  csv-to-port-dictionary.js  iana-breakdown.js  package.json  parse_iana_registery.sh
node/parsing/vala_c_header_api/: api_docs.html  c-header-to-html.js  u7_api.h
projects/tcp_client/: tcp_listener  tcp_listener.c
scripts/: gobject.sh  gobject_header.sh  gobject_source.sh
test/stdin/: main.c  test
test/thread_test/: thread_example  thread_example.vala
vala/: CLAUDE.md  README.txt  U7Array.vala  U7Bridge.vala  U7Bridge.vapi  U7Data.vala  U7Date.vala  U7Dictionary.vala  U7Error.vala  U7MainEventLoop.vala  U7NotificationCenter.vapi  U7Number.vala  U7Object.vala  U7PropertyList.vala  U7String.vala  U7TCPSocketManager.vala  U7ThreadLoop.vala  U7Utility.vala  U7WebSocketManager.vala  buildrun.sh  meson.build  meson_options.txt  mongoose.h  mongoose_extras.c  mongoose_vala_bridge.c  mongoose_vala_bridge.h  shared.h  sockopt_test  sockopt_test.vala  test  test.vala  u7_api.h  u7_bridge.c  u7_bridge.h  u7_glib.c  u7_notification_center.c  u7_notification_center.h  websocket_endpoint.vala
vala/header_gen/: meson.build  meson_options.txt
vala/pubnub/: README.txt  generate_pubnub_include.sh  pubnub_client.c
vala/target_setup_files/: linux_setup.sh  macos_setup.sh  windows_setup.sh
